--- a/libraries/psx/sun121.tex
+++ b/libraries/psx/sun121.tex
@@ -1,594 +1,53 @@
-\documentclass[twoside,11pt]{article}
+\documentclass[twoside,11pt,nolof]{starlink}
 
 % ? Specify used packages
-% \usepackage{graphicx}        %  Use this one for final production.
-% \usepackage[draft]{graphicx} %  Use this one for drafting.
 % ? End of specify used packages
-
-\pagestyle{myheadings}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
 % Fixed part
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardoccopyright}
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardoccopyright
 {Copyright \copyright\ 2000 Council for the Central Laboratory of the Research Councils, 2006 Particle Physics and Astronomy Research Council}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {121.6}
-\newcommand{\stardocauthors}   {P M Allan\\
+\stardocnumber      {121.6}
+\stardocauthors   {P M Allan\\
                                 A J Chipperfield\\ T Jenness\\
                                 David S Berry}
-\newcommand{\stardocdate}      {8th November 2007}
-\newcommand{\stardoctitle}     {PSX \\ [1ex]
+\stardocdate        {8th November 2007}
+\stardoctitle      {PSX \\ [1ex]
                                 POSIX interface routines}
-\newcommand{\stardocversion}   {Version 0.5-4}
-\newcommand{\stardocmanual}    {Programmer's Manual}
-\newcommand{\stardocabstract}  {%
+\stardocversion     {Version 0.5-4}
+\stardocmanual      {Programmer's Manual}
+\stardocabstract  {%
 PSX is a FORTRAN subroutine library that allows programmers to use the
 functionality provided by the POSIX and X/OPEN libraries. The use of this
 library will enable programmers to make use of operating system facilities in a
 machine independent way.}
 % ? End of document identification
 % -----------------------------------------------------------------------------
-
-% +
-%  Name:
-%     sun.tex
-%
-%  Purpose:
-%     Template for Starlink User Note (SUN) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%     PWD: Peter W. Draper (Starlink, Durham University)
-%
-%  History:
-%     17-JAN-1996 (AJC):
-%        Original with hypertext macros, based on MDL plain originals.
-%     16-JUN-1997 (BLY):
-%        Adapted for LaTeX2e.
-%        Added picture commands.
-%     13-AUG-1998 (PWD):
-%        Converted for use with LaTeX2HTML version 98.2 and
-%        Star2HTML version 1.3.
-%      1-FEB-2000 (AJC):
-%        Add Copyright statement in LaTeX
-%     {Add further history here}
-%
-% -
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
 % -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-\newenvironment{latexonly}{}{}
-\newcommand{\latex}[1]{#1}
-\newcommand{\html}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\HTMLcode}[2][]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{\LaTeX2\texttt{HTML}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\renewcommand{\_}{\texttt{\symbol{95}}}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-%  Format a list of items while in paragraph mode, and where there
-%  is a heading, thus the negative vertical space is not needed.
-\newcommand{\ssthitemlist}[1]{
-  \mbox{} \\
-  \vspace{-3.5ex}
-  \begin{itemize}
-     #1
-  \end{itemize}
-}
-\begin{htmlonly}
-   \newcommand{\ssthitemlist}[1]{
-      \begin{itemize}
-         #1
-      \end{itemize}
-   }
-\end{htmlonly}
-
-%  Specify a variant of the itemize environment where the top separation
-%  is reduced.  It is needed because a \vspace is ignored in the
-%  \sstitemlist command. Have modified \sstitemlist definition below to
-%  use this
-\newenvironment{sstitemize}{%
-  \vspace{-4.3ex}\begin{itemize}}{\end{itemize}}
-
+% ? Document specific \providecommand or \newenvironment commands.
 
 % Commands for displaying routines in routine lists:
 % =================================================
-\newcommand{\listline}{\hspace{1pt}\\}
-\begin{htmlonly}
-  \newcommand{\listline}{}
-\end{htmlonly}
+\providecommand{\listline}{\hspace{1pt}\\}
 
-\newcommand{\noteroutine}[4]{\item [\htmlref{#1}{#2} #3] \listline
+\providecommand{\noteroutine}[4]{\item [\htmlref{#1}{#2} #3] \listline
 \textit{#4} }
 
-\newcommand{\notimproutine}[4]{\item [#1 #3] \listline
+\providecommand{\notimproutine}[4]{\item [#1 #3] \listline
 \textit{#4} }
-%+
-%  Name:
-%     SST.TEX
-
-%  Purpose:
-%     Define LaTeX commands for laying out Starlink routine descriptions.
-
-%  Language:
-%     LaTeX
-
-%  Type of Module:
-%     LaTeX data file.
-
-%  Description:
-%     This file defines LaTeX commands which allow routine documentation
-%     produced by the SST application PROLAT to be processed by LaTeX and
-%     by LaTeX2html. The contents of this file should be included in the
-%     source prior to any statements that make of the sst commnds.
-
-%  Notes:
-%     The style file html.sty provided with LaTeX2html needs to be used.
-%     This must be before this file.
-
-%  Authors:
-%     RFWS: R.F. Warren-Smith (STARLINK)
-%     PDRAPER: P.W. Draper (Starlink - Durham University)
-
-%  History:
-%     10-SEP-1990 (RFWS):
-%        Original version.
-%     10-SEP-1990 (RFWS):
-%        Added the implementation status section.
-%     12-SEP-1990 (RFWS):
-%        Added support for the usage section and adjusted various spacings.
-%     8-DEC-1994 (PDRAPER):
-%        Added support for simplified formatting using LaTeX2html.
-%     {enter_further_changes_here}
-
-%  Bugs:
-%     {note_any_bugs_here}
-
-%-
-
-%  Define length variables.
-\newlength{\sstbannerlength}
-\newlength{\sstcaptionlength}
-\newlength{\sstexampleslength}
-\newlength{\sstexampleswidth}
-
-%  Define a \tt font of the required size.
-\latex{\newfont{\ssttt}{cmtt10 scaled 1095}}
-\html{\newcommand{\ssttt}{\tt}}
-
-%  Define a command to produce a routine header, including its name,
-%  a purpose description and the rest of the routine's documentation.
-\newcommand{\sstroutine}[3]{
-   \goodbreak
-   \rule{\textwidth}{0.5mm}
-   \vspace{-7ex}
-   \newline
-   \settowidth{\sstbannerlength}{{\Large {\bf #1}}}
-   \setlength{\sstcaptionlength}{\textwidth}
-   \setlength{\sstexampleslength}{\textwidth}
-   \addtolength{\sstbannerlength}{0.5em}
-   \addtolength{\sstcaptionlength}{-2.0\sstbannerlength}
-   \addtolength{\sstcaptionlength}{-5.0pt}
-   \settowidth{\sstexampleswidth}{{\bf Examples:}}
-   \addtolength{\sstexampleslength}{-\sstexampleswidth}
-   \parbox[t]{\sstbannerlength}{\flushleft{\Large {\bf #1}}}
-   \parbox[t]{\sstcaptionlength}{\center{\Large #2}}
-   \parbox[t]{\sstbannerlength}{\flushright{\Large {\bf #1}}}
-   \begin{description}
-      #3
-   \end{description}
-}
-
-%  Format the description section.
-\newcommand{\sstdescription}[1]{\item[Description:] #1}
-
-%  Format the usage section.
-\newcommand{\sstusage}[1]{\item[Usage:] \mbox{}
-\\[1.3ex]{\raggedright \ssttt #1}}
-
-%  Format the invocation section.
-\newcommand{\sstinvocation}[1]{\item[Invocation:]\hspace{0.4em}{\tt #1}}
-
-%  Format the arguments section.
-\newcommand{\sstarguments}[1]{
-   \item[Arguments:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the returned value section (for a function).
-\newcommand{\sstreturnedvalue}[1]{
-   \item[Returned Value:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the parameters section (for an application).
-\newcommand{\sstparameters}[1]{
-   \item[Parameters:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the examples section.
-\newcommand{\sstexamples}[1]{
-   \item[Examples:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Define the format of a subsection in a normal section.
-\newcommand{\sstsubsection}[1]{ \item[{#1}] \mbox{} \\}
-
-%  Define the format of a subsection in the examples section.
-\newcommand{\sstexamplesubsection}[2]{\sloppy
-\item[\parbox{\sstexampleslength}{\ssttt #1}] \mbox{} \vspace{1.0ex}
-\\ #2 }
-
-%  Format the notes section.
-\newcommand{\sstnotes}[1]{\item[Notes:] \mbox{} \\[1.3ex] #1}
-
-%  Provide a general-purpose format for additional (DIY) sections.
-\newcommand{\sstdiytopic}[2]{\item[{\hspace{-0.35em}#1\hspace{-0.35em}:}]
-\mbox{} \\[1.3ex] #2}
-
-%  Format the implementation status section.
-\newcommand{\sstimplementationstatus}[1]{
-   \item[{Implementation Status:}] \mbox{} \\[1.3ex] #1}
-
-%  Format the bugs section.
-\newcommand{\sstbugs}[1]{\item[Bugs:] #1}
-
-%  Format a list of items while in paragraph mode.
-\newcommand{\sstitemlist}[1]{
-  \mbox{} \\
-  \vspace{-3.5ex}
-  \begin{sstitemize}
-     #1
-  \end{sstitemize}
-}
-
-%  Define the format of an item.
-\newcommand{\sstitem}{\item}
-
-%% Now define html equivalents of those already set. These are used by
-%  latex2html and are defined in the html.sty files.
-\begin{htmlonly}
-
-%  sstroutine.
-   \newcommand{\sstroutine}[3]{
-      \subsection{#1\xlabel{#1}-\label{#1}#2}
-      \begin{description}
-         #3
-      \end{description}
-   }
-
-%  sstdescription
-   \newcommand{\sstdescription}[1]{\item[Description:]
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstusage
-   \newcommand{\sstusage}[1]{\item[Usage:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstinvocation
-   \newcommand{\sstinvocation}[1]{\item[Invocation:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstarguments
-   \newcommand{\sstarguments}[1]{
-      \item[Arguments:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstreturnedvalue
-   \newcommand{\sstreturnedvalue}[1]{
-      \item[Returned Value:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstparameters
-   \newcommand{\sstparameters}[1]{
-      \item[Parameters:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstexamples
-   \newcommand{\sstexamples}[1]{
-      \item[Examples:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstsubsection
-   \newcommand{\sstsubsection}[1]{\item[{#1}]}
-
-%  sstexamplesubsection
-   \newcommand{\sstexamplesubsection}[2]{\item[{\ssttt #1}] #2}
-
-%  sstnotes
-   \newcommand{\sstnotes}[1]{\item[Notes:] #1 }
-
-%  sstdiytopic
-   \newcommand{\sstdiytopic}[2]{\item[{#1}] #2 }
-
-%  sstimplementationstatus
-   \newcommand{\sstimplementationstatus}[1]{
-      \item[Implementation Status:] #1
-   }
-
-%  sstitemlist
-   \newcommand{\sstitemlist}[1]{
-      \begin{itemize}
-         #1
-      \end{itemize}
-      \\
-   }
-%  sstitem
-   \newcommand{\sstitem}{\item}
-
-\end{htmlonly}
-
-%  End of "sst.tex" layout definitions.
-%.
 
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / \textsc{Rutherford Appleton Laboratory} \hfill \textbf{\stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\textbf{\stardoctitle \\ [2.5ex]}}
-   {\LARGE\textbf{\stardocversion \\ [4ex]}}
-   {\Huge\textbf{\stardocmanual}}
-   \end{center}
-   \vspace{5mm}
-
-% ? Add picture here if required for the LaTeX version.
-%   e.g. \includegraphics[scale=0.3]{filename.ps}
-% ? End of picture
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\textbf{Abstract}}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> <HR> \end{rawhtml}
-
-% ? Add picture here if required for the hypertext version.
-%   e.g. \includegraphics[scale=0.7]{filename.ps}
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC / Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-\stardocabstract
-% ? End of document abstract
-
-% -----------------------------------------------------------------------------
-% ? Latex Copyright Statement
-%  =========================
-\begin{latexonly}
-\newpage
-\vspace*{\fill}
-\stardoccopyright
-\end{latexonly}
-% ? End of Latex copyright statement
-
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-  \newpage
-  \begin{latexonly}
-    \setlength{\parskip}{0mm}
-    \tableofcontents
-    \setlength{\parskip}{\medskipamount}
-    \markboth{\stardocname}{\stardocname}
-  \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-
-\cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 % ? Main text
 
@@ -748,28 +207,28 @@ To use the PSX routines, you first need to `log on' for development by using
 the \texttt{psx\_dev} command to create the necessary soft links in your
 directory so that you can use the short form of the include file names.
 
-\begin{quote}\begin{verbatim}
+\begin{terminalv}
 % psx_dev
-\end{verbatim}\end{quote}
+\end{terminalv}
 
 If a FORTRAN program wishes to check for a particular error status returned by
 a PSX routine, then it should contain the line
 
-\begin{quote}\begin{verbatim}
+\begin{terminalv}
 INCLUDE 'PSX_ERR'
-\end{verbatim}\end{quote}
+\end{terminalv}
 
 The use of upper-case in the file name is important. This will define the
 symbolic constants listed in appendix~\ref{include}.
 
 To compile and link a program that uses the PSX library, type
 
-\begin{quote}\begin{verbatim}
+\begin{terminalv}
 % f77 program.f -L/star/lib `psx_link` -o program
-\end{verbatim}\end{quote}
+\end{terminalv}
 
 \section{\xlabel{references}References}
-% \markboth{\stardocname}{\stardocname}  % Stops the page heading changing to REFERENCES.
+%   % Stops the page heading changing to REFERENCES.
 \begin{thebibliography}{9}
 \bibitem{psx:std}IEEE Standard Portable Operating System Interface for Computer
 Environments (IEEE Std 1003.1-1988). Publ, Institute of Electrical and
@@ -783,7 +242,7 @@ Environments, FORTRAN~77 Bindings (P1003.9~/~Draft 5.0).
 
 \newpage
 \appendix
-% \markright{\stardocname}{\stardocname}  % Stops the page heading changing to REFERENCES.
+%   % Stops the page heading changing to REFERENCES.
 
 \section{\xlabel{examples}Examples}
 
@@ -799,7 +258,7 @@ necessary to take into account the difference in the syntax of directory names
 on VMS and Unix systems.
 
 \begin{small}
-\begin{verbatim}
+\begin{terminalv}
       PROGRAM NEWFIL
 
       IMPLICIT NONE
@@ -836,7 +295,7 @@ on VMS and Unix systems.
       END IF
 
       END
-\end{verbatim}
+\end{terminalv}
 \end{small}
 
 Although the PSX routines are designed to be used with other Starlink routines
@@ -853,7 +312,7 @@ allocated at compile time, \emph{i.e.} there are no dynamic arrays. Here is an
 example of using PSX routines to dynamically allocate an array.
 
 \begin{small}
-\begin{verbatim}
+\begin{terminalv}
       PROGRAM MAIN
       IMPLICIT NONE
       INCLUDE 'SAE_PAR'
@@ -912,7 +371,7 @@ example of using PSX routines to dynamically allocate an array.
       END DO
 
       END
-\end{verbatim}
+\end{terminalv}
 \end{small}
 
 In this case the main program merely sets the value of STATUS and calls
@@ -929,8 +388,8 @@ If the code is required to work where pointers may be longer than INTEGERs,
 The construct \texttt{\%VAL(CNF\_PVAL(PNTR))}, rather than simply
 \texttt{\%VAL(PNTR)}, should be used in passing the pointer to FILL and PRNT.
 Function CNF\_PVAL is defined in the CNF\_PAR include file and described in
-\xref{SUN/209}{sun209}{accessing_dynamic_memory_from_c_and_fortran}\latex{
-(section `Pointers')}.
+\xref{SUN/209}{sun209}{accessing_dynamic_memory_from_c_and_fortran}
+(section `Pointers').
 
 \section{\xlabel{include_files}Include Files}
 \label{include}
@@ -1143,7 +602,7 @@ PSX\_\_ERRNO & System error during POSIX call
       \sstsubsection{
          MODE = CHARACTER$*$($*$) (Given)
       }{
-         The access mode - either a {\tt '} {\tt '} (space) to merely check
+         The access mode - either a \texttt{'} \texttt{'} (space) to merely check
          for file existence or one or more of the letters R,W,X.
       }
       \sstsubsection{
@@ -1353,8 +812,8 @@ PSX\_\_ERRNO & System error during POSIX call
             {accessing_dynamic_memory_from_c_and_fortran}(PNTR)),
             rather than simply \%VAL(PNTR),
             should be used to pass the pointer to the subroutine.
-            \latex{Function CNF\_PVAL is described in SUN/209 Section
-            `Pointers'.}
+             Function CNF\_PVAL is described in SUN/209 Section
+            `Pointers'.
 
          \sstitem
          If several calls to PSX\_CALLOC are made, the space returned by
@@ -1764,7 +1223,7 @@ PSX\_\_ERRNO & System error during POSIX call
    }
    \sstexamples{
       \sstexamplesubsection{
-         CALL PSX\_GETENV( {\tt '}USER{\tt '}, TRANS, STATUS )
+         CALL PSX\_GETENV( \texttt{'}USER\texttt{'}, TRANS, STATUS )
       }{
          This will return the value of the environment variable USER,
          i.e. the username of the current process.
@@ -2395,7 +1854,7 @@ PSX\_\_ERRNO & System error during POSIX call
 
          Note that in
          this case the program needs to know that an INTEGER variable
-         is stored in four bytes. {\em This is not portable}. In such a case
+         is stored in four bytes. \emph{This is not portable}. In such a case
          it is better to use PSX\_CALLOC or to use the symbolic
          constants NUM\_NB$<$T$>$ defined in the file PRM\_PAR to determine
          the number of bytes per unit of storage. (See
@@ -2423,8 +1882,8 @@ PSX\_\_ERRNO & System error during POSIX call
             {accessing_dynamic_memory_from_c_and_fortran}(PNTR)),
             rather than simply \%VAL(PNTR),
             should be used to pass the pointer to the subroutine.
-            \latex{Function CNF\_PVAL is described in SUN/209 Section
-            `Pointers'.}
+            Function CNF\_PVAL is described in SUN/209 Section
+            `Pointers'.
 
          \sstitem
          If several calls to PSX\_MALLOC are made, the space returned by
@@ -2489,7 +1948,7 @@ PSX\_\_ERRNO & System error during POSIX call
    }
    \sstexamples{
       \sstexamplesubsection{
-         CALL PSX\_PUTENV( {\tt '}DATADIR{\tt '}, DIR, STATUS )
+         CALL PSX\_PUTENV( \texttt{'}DATADIR\texttt{'}, DIR, STATUS )
       }{
          Set the DATADIR environment variable to the value stored
          in the DIR character string.
@@ -2643,7 +2102,7 @@ PSX\_\_ERRNO & System error during POSIX call
          We assume SUB1 returns without action if STATUS is bad.
 
          Note that in this case the program needs to know that an
-         INTEGER variable is stored in four bytes. {\em This is not
+         INTEGER variable is stored in four bytes. \emph{This is not
          portable}. In such a case it is better to use the symbolic
          constants NUM\_NB$<$T$>$ defined in the file PRM\_PAR to determine
          the number of bytes per unit of storage. (See
@@ -2671,8 +2130,8 @@ PSX\_\_ERRNO & System error during POSIX call
             {accessing_dynamic_memory_from_c_and_fortran}(PNTR)),
             rather than simply \%VAL(PNTR),
             should be used to pass the pointer to the subroutine.
-            \latex{Function CNF\_PVAL is described in SUN/209 Section
-            `Pointers'.}
+            Function CNF\_PVAL is described in SUN/209 Section
+            `Pointers'.
 
          \sstitem
          If SIZE is zero, then the space pointed to by PNTR is freed.
@@ -2716,8 +2175,8 @@ PSX\_\_ERRNO & System error during POSIX call
    Remove a file or directory
 }{
    \sstdescription{
-      This C function calls the {\tt "}remove{\tt "} RTL function to remove a specified
-      file or directory. It is equivalent to {\tt "}unlink{\tt "} for files and {\tt "}rmdir{\tt "}
+      This C function calls the \texttt{"}remove\texttt{"} RTL function to remove a specified
+      file or directory. It is equivalent to \texttt{"}unlink\texttt{"} for files and \texttt{"}rmdir\texttt{"}
       for directories. A directory must be empty. On error, STATUS is set
      to PSX\_\_ERRNO and the error message will contain the system error
      message.
@@ -2739,7 +2198,7 @@ PSX\_\_ERRNO & System error during POSIX call
    }
    \sstexamples{
       \sstexamplesubsection{
-         CALL PSX\_REMOVE( {\tt '}tmp.dat{\tt '}, STATUS )
+         CALL PSX\_REMOVE( \texttt{'}tmp.dat\texttt{'}, STATUS )
       }{
          This will remove the file tmp.dat
       }
@@ -2893,7 +2352,7 @@ PSX\_\_ERRNO & System error during POSIX call
       \sstsubsection{
          ITEM = CHARACTER $*$ ( $*$ ) (Given)
       }{
-         The item of information required about the file. See {\tt "}Items{\tt "}
+         The item of information required about the file. See \texttt{"}Items\texttt{"}
          below.
       }
       \sstsubsection{
@@ -2915,22 +2374,22 @@ PSX\_\_ERRNO & System error during POSIX call
       \sstitemlist{
 
          \sstitem
-         {\tt "}UID{\tt "} - user ID of owner.
+         \texttt{"}UID\texttt{"} - user ID of owner.
 
          \sstitem
-         {\tt "}GID{\tt "} - group ID of owner.
+         \texttt{"}GID\texttt{"} - group ID of owner.
 
          \sstitem
-         {\tt "}SIZE{\tt "} - total file size, in bytes.
+         \texttt{"}SIZE\texttt{"} - total file size, in bytes.
 
          \sstitem
-         {\tt "}ATIME{\tt "} - time of last access.
+         \texttt{"}ATIME\texttt{"} - time of last access.
 
          \sstitem
-         {\tt "}CTIME{\tt "} - time of last status change (e.g. file creation).
+         \texttt{"}CTIME\texttt{"} - time of last status change (e.g. file creation).
 
          \sstitem
-         {\tt "}MTIME{\tt "} - time of last modification.
+         \texttt{"}MTIME\texttt{"} - time of last modification.
 
       }
       The time values are returned as the number of ticks since an
@@ -3184,7 +2643,7 @@ Although the PSX routines appear to the user as FORTRAN subroutines,
 they are actually written in C. The FORTRAN~--~C interface is handled
 by the macros and functions of Starlink's
 \xref{CNF}{sun209}{abstract}
-package\latex{ (see SUN/209)}.
+package (see SUN/209).
 The use of these macros makes the source code sufficiently portable that it
 runs on all Starlink supported hardware platforms.
 
@@ -3194,7 +2653,7 @@ returned as normal FORTRAN strings with trailing blanks.
 The PSX routines call the C run time library.
 
 The PSX routines report errors via
-\xref{EMS}{ssn4}{abstract}\latex{ (see SSN/4)}.
+\xref{EMS}{ssn4}{abstract}  (see SSN/4).
 While this is a standard
 feature of Starlink subroutine libraries, occasionally it will be
 necessary \emph{not} to report errors via EMS. For example, if a PSX routine
